--- a/abstract.tex
+++ b/abstract.tex
@@ -1,3 +1,21 @@
+\documentclass[12pt, letterpaper]{article}
+\usepackage{graphicx}
+\begin{document}
+\title{National football victories increase rates of alcohol-related domestic abuse}
+\textbf{Letter}:
+A Letter is an important research study of high quality and general interest to human behaviour researchers.  The text is approximately 5,000 words, including the introductory paragraph, but excluding references and figure legends. Letters should have no more than 4 display items (figures and/or tables). As a guideline, Letters contain approximately 30 references (excluding those cited exclusively in Methods). This format begins with a title of, at most, 90 characters (including spaces), followed by an introductory paragraph (not abstract) of approximately 200 words, summarizing the background, rationale, main results (introduced by "Here we show" or some equivalent phrase) and implications of the study. This paragraph should be fully referenced and should be considered part of the main text, so that any subsequent introductory material avoids too much redundancy with the introductory paragraph. Letters are not divided by headings, except for the Methods heading.
+
+Letters include received/accepted dates and may be accompanied by supplementary information. Letters are peer reviewed.
+
+
+\maketitle
+
+\section{Introduction}
+
+Understanding the potential triggers of violent behaviour in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested a link between national football (soccer) tournaments and increased rates of reported domestic abuse. However, we know little about the role alcohol plays in this relationship. Using crime and incidents data from one of the largest police forces in England from the period 2010-2018, we find that alcohol-related domestic abuse incidents increase by 60\% after an England victory on a national football tournament (World Cup, European Championship). This effect is exclusively driven by a 72\% increase in male to female alcohol-related incidents, and is not present in other types of violent behaviours, such as public order offences, other violent crimes or property-related crimes. A three-hour analysis reveals that the increase starts in the three-hour period of the match, the highest in the three hours after the victory, and gradually declines to its baseline level in the 12 hours following the match. Looking at patterns of abusive incidents, we find that incidents happening on match days are not different from abusive incidents occurring on non-match days with respect to the number of days since/until next incident.
+
+
+
 Why do men abuse women?
 
 
@@ -5,7 +23,7 @@ Why are men more likely to abuse their female intimate partner after watching sp
 
 We use a dataset of X,000,000 incidents and crimes in one of England's largest police forces, matched to dates of the three World Cups and two Eurothingies between 20XX and 20XX.
 
-We find a 60\% increase in alcohol-related domestic abuse when England wins a world cup or Euro match. 
+We find a 60 increase in alcohol-related domestic abuse when England wins a world cup or Euro match. 
 
 [This is a large effect, as large as ... sentence about how the effect compares to Christmas, or the effect of a weekday]
 
@@ -28,14 +46,14 @@ Whether the previous incident is alcohol involved is irrelavant.
 
 Theoretical theme :
 
-toxic masculinity, pressure cooker, does alcohol _CAUSE_ abuse, football changes reporting not actual abuse.
+toxic masculinity, pressure cooker, does alcohol CAUSE abuse, football changes reporting not actual abuse.
 
 Together, this suggests Football-related abuse is just like other abuse. 
 
 
 Figure 1.
 
-OVerall abuse by football and alcohol to get 60\% illustrated
+OVerall abuse by football and alcohol to get 60 illustrated
 
 Figure 2. Breakdown by sex pairs and age-gap to show its male-on-female intimate partner
 
@@ -47,4 +65,4 @@ Paragaph 2 is on previous football-domestic abuse research.
 
 Paragraphs on why men abuse women, one on reporting bias, one on alcohol comorbid or causal
 
-
+\end{document}
