--- a/abstract.tex
+++ b/abstract.tex
@@ -10,10 +10,67 @@ Letters include received/accepted dates and may be accompanied by supplementary 
 
 \maketitle
 
-\section{Introduction}
+\section{Shortintro}
 
-Understanding the potential triggers of violent behaviour in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research has suggested a link between national football (soccer) tournaments and increased rates of reported domestic abuse. However, we know little about the role alcohol plays in this relationship. Using crime and incidents data from one of the largest police forces in England from the period 2010-2018, we find that alcohol-related domestic abuse incidents increase by 60\% after an England victory on a national football tournament (World Cup, European Championship). This effect is exclusively driven by a 72\% increase in male to female alcohol-related incidents, and is not present in other types of violent behaviours, such as public order offences, other violent crimes or property-related crimes. A three-hour analysis reveals that the increase starts in the three-hour period of the match, the highest in the three hours after the victory, and gradually declines to its baseline level in the 12 hours following the match. Looking at patterns of abusive incidents, we find that incidents happening on match days are not different from abusive incidents occurring on non-match days with respect to the number of days since/until next incident.
+Understanding the potential triggers of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research (Kirby, Biricombe \& Cafe) has suggested a link between national football (soccer) tournaments and increased rates of reported domestic abuse in England. While hypothesized to be a significant contributing factor, we know little about the role alcohol plays in this relationship. Using crime and incidents data from one of the largest police forces in England from the period 2010-2018, we find that alcohol-related domestic abuse incidents increase by 61\% after an England victory in a national football tournament (World Cup, European Championship). This effect is driven by a 71\% increase in male to female alcohol-related incidents (and is absent from male to male, female to male and female to female incidents), and is not present in other types of violent behaviours, such as public order offences, other violent, or property-related crimes. A three-hour analysis also reveals that the increase starts in the three-hour period of the match, the highest in the three hours after the victory, and gradually declines to its baseline level in the 12 hours following the match. Considering incidents that were repeated on match days, we did not find that they were characteristically different from other incidents that reoccurred on non-match days.
 
+
+\section{Longintro}
+
+"If England gets beaten, so will she" - read the poster as part of the "The Not-So-Beautiful-Game" awareness campaign launched by the National Centre for Domestic Violence in the wake of the 2018 FIFA World Cup. While the link between sporting events and intimate partner abuse has been in the focus of qualitative sociology for decades (e.g., Sabo et al, 2000; ), large-scale quantitative investigations of this relationship are relatively scarce. In the US, the most extensive analysis assessing the link between NFL games and intimate partner violence (IPV) have found that an unexpected loss of the local team resulted in a 10\% increase in rates of reported IPV (Card \& Lee, 2010). 
+
+In England, a few studies have investigated the link between football and domestic abuse. Football has a long history in England, and is by far the most popular sport in the country, with the World Cup consistently attracting record number of viewers every four years (citation needed). In the context of football, gender 
+
+In a small, exploratory study Biricombe and Cafe investigated the effect of the 2010 World Cup on domestic abuse, using data from 33 out of 39 police forces in England. Using a control period from 2009, they found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days then they draw. In a more comprehensive investigation, Kirbey et al used daily counts of intimate partner violence in Lancashire from the 2002, 2006 and 2010 World Cup, and they found a 38\% increase in rates of reported domestic violence when the England team lost, and a 26\% increase when they won or drew. These estimates were widely discussed in the media before the 2018 World Cup, and were even featured in the Not-so Beautiful Game Campaign.  However, none of these studies have investigated whether the increase came from alcohol-related incidents.
+
+\subsection{Rationale}
+
+What role might alcohol play in the relationship between football tournaments and domestic abuse? In England, alcohol consumption is intrinsically linked to national football tournaments, (how much beer sales go up, or sponsor the tournament). These tournaments take place in June-July, when alcohol consumption is on the rise anyway.  
+
+It is important to note that alcohol does not cause domestic abuse.
+
+
+\subsection{Data description plus define domestic abuse}
+
+with emphasis on that it's not a one-off thing 
+
+According to the Crime Survey of England and Wales, only 17\% of all domestic abuse victims reported the abuse to the police in the period between April, 2017 and March, 2018.
+
+\section{Results}
+
+\subsection{Where does the increase come from? Male to female, age diff less than 15}
+
+\subsection{How does the effect on DA compare to other types of crimes?}
+
+\subsection{What can we say about the temporal dynamics of the effect?}
+
+
+\subsection{What can we say about repeat incidents that are "triggered" on match days?}
+
+Recognising that domestic abuse is not a one-off thing, but a pattern of behaviour.
+
+
+
+\subsection{Reconciling with previous evidence}
+
+So how can our results be reconciled with those reported previously? Card \& Lee have found an increase in domestic abuse when there is an unexpected loss but not when the team wins (double check with Neil). An even more striking difference is that they did not find any differential effect on alcohol-related incidents, whereas in our data, the effect is only present in alcohol-related domestic abuse incidents. This discrepancy highlights that the effect on sports-induced emotional cues on domestic abuse are highly context-sensitive.
+
+Our results are somewhat easier to reconcile with other England-based studies. Biricombe and Cafe found an approximately equal increase in domestic abuse when England lost or won, and no increase when they draw. Similarly, our results suggest that there is no increase when England draws - possibly due to the fact that only relatively unimportant matches can result in a draw - but we also found an asymmetric effect of losses and wins. Kirby also reported an asymmetric effect, with a 38\% [15 - 66] and 26\% [13 - 40] increase when England lost or win or draw, respectively. However, upon re-analysing their data with separate coefficients for win and draw and adding a month control, the effects change slightly, indicating a 46\% [29 - 65] increase when England wins, and a 33\% [10 - 59] increase when they lose, respectively, and no effect when they draw. This is more in line with our results, which suggest that while both losses and wins increase rates of domestic abuse, wins have more pronounced effect.
+
+
+
+
+\subsection{Limitations}
+underreporting, other factors like weather, campaigns may have increased willingness to report? issues about defining initimate partner violence
+maybe increase because people celebrate outside? no.
+
+If he had enough data, we could test for the same thing Card \& Lee have done.
+
+\section{Conclusion}
+
+Again, emphasize 
+
+Jodie Swallow: DA survivors reported that these were not one-offs
 
 
 Why do men abuse women?
@@ -24,6 +81,8 @@ Why are men more likely to abuse their female intimate partner after watching sp
 We use a dataset of X,000,000 incidents and crimes in one of England's largest police forces, matched to dates of the three World Cups and two Eurothingies between 20XX and 20XX.
 
 We find a 60 increase in alcohol-related domestic abuse when England wins a world cup or Euro match. 
+
+This effect is large, larger than the  than the effect of a Saturday (48\%)
 
 [This is a large effect, as large as ... sentence about how the effect compares to Christmas, or the effect of a weekday]
 
