--- a/abstract.tex
+++ b/abstract.tex
@@ -1,5 +1,7 @@
 \documentclass[12pt, letterpaper]{article}
 \usepackage{graphicx}
+\usepackage{hyperref}
+\usepackage{xcolor}
 \begin{document}
 \title{National football victories increase rates of alcohol-related domestic abuse}
 \textbf{Letter}:
@@ -12,35 +14,56 @@ Letters include received/accepted dates and may be accompanied by supplementary 
 
 \section{Shortintro}
 
-Understanding the potential triggers of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research (Kirby, Biricombe \& Cafe) has suggested a link between national football (soccer) tournaments and increased rates of reported domestic abuse in England. While hypothesized to be a significant contributing factor, we know little about the role alcohol plays in this relationship. Using crime and incidents data from one of the largest police forces in England from the period 2010-2018, we find that alcohol-related domestic abuse incidents increase by 61\% after an England victory in a national football tournament (World Cup, European Championship). This effect is driven by a 71\% increase in male to female alcohol-related incidents (and is absent from male to male, female to male and female to female incidents), and is not present in other types of violent behaviours, such as public order offences, other violent, or property-related crimes. A three-hour analysis also reveals that the increase starts in the three-hour period of the match, the highest in the three hours after the victory, and gradually declines to its baseline level in the 12 hours following the match. Considering incidents that were repeated on match days, we did not find that they were characteristically different from other incidents that reoccurred on non-match days.
+Understanding the potential triggers of violence in family and intimate partner relationships is key for designing effective interventions to protect victims. Previous research (Kirby, Biricombe \& Cafe) has suggested a link between national football (soccer) tournaments and increased rates of reported domestic abuse in England. While hypothesized to be a significant factor, we know little about the role alcohol plays in this relationship. Using crime data from the third largest police force in England from the period 2010-2018, we find that alcohol-related domestic abuse incidents increase by 61\% after an England victory in a national football tournament (World Cup, European Championship). This effect is driven by a 71\% increase in male to female alcohol-related incidents (and is absent from male to male, female to male and female to female domestic abuse incidents), and is not present in other types of criminal behaviours, such as public order offences, other violent, or property-related offences. A three-hour analysis also reveals that the increase starts in the three-hour period of the match, the highest in the three hours after the victory, and gradually declines to its baseline level in the 12 hours following the match. Considering repeat incidents that occurred on match days, we did not find that they are characteristically different from other incidents that reoccurred on non-match days.
 
 
 \section{Longintro}
 
-"If England gets beaten, so will she" - read the poster as part of the "The Not-So-Beautiful-Game" awareness campaign launched by the National Centre for Domestic Violence in the wake of the 2018 FIFA World Cup. While the link between sporting events and intimate partner abuse has been in the focus of qualitative sociology for decades (e.g., Sabo et al, 2000; ), large-scale quantitative investigations of this relationship are relatively scarce. In the US, the most extensive analysis assessing the link between NFL games and intimate partner violence (IPV) have found that an unexpected loss of the local team resulted in a 10\% increase in rates of reported IPV (Card \& Lee, 2010). 
+"If England gets beaten, so will she" - read the poster as part of the "The Not-So-Beautiful-Game" awareness campaign launched by the National Centre for Domestic Violence in the wake of the 2018 FIFA World Cup. While the link between sporting events and intimate partner abuse has long been in the focus of qualitative sociology (e.g., Sabo et al, 2000), large-scale quantitative investigations of this relationship are relatively scarce. In the US, the most extensive statistical analysis in the topic was presented by Card \& Lee (2010), who found that an unexpected loss of the local NFL team resulted in a 10\% increase in rates of reported intimate partner violence (IPV).
 
-In England, a few studies have investigated the link between football and domestic abuse. Football has a long history in England, and is by far the most popular sport in the country, with the World Cup consistently attracting record number of viewers every four years (citation needed). In the context of football, gender 
+In the UK, a few studies have investigated the link between football and domestic abuse. Football has a long history in the country, and is by far the most popular sport, with the World Cup consistently attracting record number of viewers every four years (\textit{citation}). In a small, exploratory study Biricombe and Cafe investigated the effect of the 2010 World Cup on domestic abuse, using data from 33 out of 39 police forces in England. Using a control period from 2009, they found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days then they draw. In a more comprehensive investigation, Kirbey et al used daily counts of intimate partner violence in Lancashire from the 2002, 2006 and 2010 World Cup, and they found a 38\% increase in rates of reported domestic violence when the England team lost, and a 26\% increase when they won or drew. These estimates had been widely discussed in the British media before the 2018 World Cup, and were also quoted on the posters in the Not-so Beautiful Game Campaign.  
 
-In a small, exploratory study Biricombe and Cafe investigated the effect of the 2010 World Cup on domestic abuse, using data from 33 out of 39 police forces in England. Using a control period from 2009, they found that rates of reported domestic abuse increased significantly when England lost or won (about 33-35\%), but did not change on days then they draw. In a more comprehensive investigation, Kirbey et al used daily counts of intimate partner violence in Lancashire from the 2002, 2006 and 2010 World Cup, and they found a 38\% increase in rates of reported domestic violence when the England team lost, and a 26\% increase when they won or drew. These estimates were widely discussed in the media before the 2018 World Cup, and were even featured in the Not-so Beautiful Game Campaign.  However, none of these studies have investigated whether the increase came from alcohol-related incidents.
-
-\subsection{Rationale}
-
-What role might alcohol play in the relationship between football tournaments and domestic abuse? In England, alcohol consumption is intrinsically linked to national football tournaments, (how much beer sales go up, or sponsor the tournament). These tournaments take place in June-July, when alcohol consumption is on the rise anyway.  
-
-It is important to note that alcohol does not cause domestic abuse.
+These results should be interpreted in light of the fact that domestic abuse is a vastly underreported crime (the latest figures published by the Crime Survey of England and Wales show that only 17\% of all domestic abuse victims reported the abuse to the police \textit{citation}), and that domestic abuse should be viewed as a pattern of ongoing behaviour, involving a series of incidents, rather than a one-off incident triggered by football (Brooks-Hay \& Lombard, 2018). These studies, however, suggest that national football tournaments may create an environment for abusers that is conducive to domestic abuse. While the link between football fandom and domestic abuse is complex...\textcolor{red}{1-2 sentences about hegemonic masculinity in sports - basically presenting the idea that sports fandom can promote an experience of of masculinity where dominance, control and violence is permitted and encouraged.}
 
 
-\subsection{Data description plus define domestic abuse}
 
-with emphasis on that it's not a one-off thing 
+\textcolor{red}{What role might alcohol play in this relationship? Research on alcohol and domestic abuse. It's quite controversial, domestic abusers are more likely to engage in substance abuse, but the pathways are not clear (Peralta et al., 2010). Previous quantitative studies havent said much about it. Card \& Lee found that the increase didn't depend on the type of the incident ("no difference in the rise in alcohol-related and non-alcohol related offences"). BUT cultural differences could imply different effects in the UK. Football fandom and alcohol consumption have always been inextricably linked in England ( “win, draw, lose, always on the booze”), and this link is continuously further reinforced by the media (\textit{citation}). Talk about how alcohol involvement can make the abuse more likely without sounding like it can be blamed on the alcohol (insight from qualitative research on how alcohol contributes to it? - 1) abusers use alcohol as a "shield" to excuse their behaviour Javaid, 2015; 2) alcohol may strengthen feelings of hegemonic masculinity, palmer, 2014).}
 
-According to the Crime Survey of England and Wales, only 17\% of all domestic abuse victims reported the abuse to the police in the period between April, 2017 and March, 2018.
+\textcolor{red}{Hypothesis: maybe we would expect overall DA to go up when E loses (based on previous evidence), whereas andecdotal evidence (NHS spokesperson) suggests increase in drinking when England wins, so we would expect increase in alcohol-related incidents then?}
+
+Here we explore the hypothesis that alcohol plays an instrumental role in the link between national football matches and domestic abuse. To further investigate the specific relationship between football fandom, alcohol consumption an domestic abuse, we test whether the effect varies by crime type, by comparing the effect of football on domestic abuse with its effect on other violent offences, property-related crimes and public order offences. We further explore how the effect differs based on the gender of the perpetrator and the victim and its temporal dynamics by a three-hour regression. Our data allows us to investigate the history of the domestic abuse incidents that happen on days when England win, and to compare these with other domestic abuse incidents. As a robustness check, we also explore whether the effect is robust to the exclusion of specific years. 
+
+Opinion: \href{https://www.heraldscotland.com/opinion/14432673.football-doesnt-cause-domestic-abuse-men-do/}{Football doesn't cause domestic abuse, men do}.
+
+
+Opinion: \href{https://www.newstatesman.com/politics/sport/2016/07/what-does-it-mean-when-major-football-tournaments-increase-incidents-domestic}{What does it mean when major football tournaments increase incidents of domestic violence?}.
+
+Drinking \& Football: \href{https://www.independent.co.uk/news/health/world-cup-2018-england-vs-sweden-alcohol-poisoning-hospital-record-number-quarter-semi-final-croatia-a8702961.html}{Record number of people admitted to hospital with alcohol poisoning after England World Cup quarter-final win}.
+
+\subsection{Data description}
+
+To explore these hypotheses, we are using crime data from the West Midlands Police (the third largest police force in England, serving an estimated 2.8 million people in 2017) for the period between 2010 and 2018. Our dataset contains all recorded crimes (with a domestic abuse marker) and specific types of incidents (including domestic abuse incidents). For each record in this dataset, we have information about the time and location of the incident or crime, and the gender and age of the offender and victim. We can also identify repeat offenders and victims by their unique person identifier. Incidents and crimes that are domestic abuse related comprise about 31\% of all recorded crimes and incidents in the dataset. There were three World Cups (2010, 2014, 2018) and two European Championships (2012, 2016) in the period covered by our dataset. 
+
+\href{https://www.gov.uk/government/statistics/police-funding-for-england-and-wales-2015-to-2019}{Police force sizes}.
+
+\href{https://www.nomisweb.co.uk/reports/lmp/la/1967128614/report.aspx#tabrespop}{Population projections}.
+
+
+
 
 \section{Results}
 
 \subsection{Where does the increase come from? Male to female, age diff less than 15}
 
 \subsection{How does the effect on DA compare to other types of crimes?}
+
+
+\begin{figure}[htb!]
+\centering
+\includegraphics[width=1\textwidth]{DA_compare.pdf}
+\label{fig:DA_compare}
+\end{figure}
+
 
 \subsection{What can we say about the temporal dynamics of the effect?}
 
@@ -67,10 +90,6 @@ maybe increase because people celebrate outside? no.
 If he had enough data, we could test for the same thing Card \& Lee have done.
 
 \section{Conclusion}
-
-Again, emphasize 
-
-Jodie Swallow: DA survivors reported that these were not one-offs
 
 
 Why do men abuse women?
